<resources>
    <string name="app_name">Ework</string>
    <string name="title_activity_login">用户登录</string>
    <string name="simple_view_behavior">com.mainiway.eworkpal.widgets.SimpleViewBehavior</string>

    <!--实现Android6.0的运行时权限检测-->
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <!--登录注册模块-->
    <string name="text_back">返回</string>
    <string name="text_commit">提交</string>
    <string name="text_sign_in">账号登录</string>
    <string name="text_registration_of_new_enterprises">短信验证码登录</string>
    <string name="text_phone_number">手机号</string>
    <string name="text_password">密码</string>
    <string name="text_forget_password">忘记密码?</string>
    <string name="text_application_to_join_the_enterprise">申请加入企业</string>
    <string name="text_please_enter_your_phone_number">请输入您的手机号</string>
    <string name="text_please_enter_the_verification_code">请输入验证码</string>
    <string name="text_get_verification_code">获取验证码</string>
    <string name="text_next">下一步</string>
    <string name="text_please_fill_in_the_name_of_the_enterprise">请填写企业名称</string>
    <string name="text_full_name">姓名</string>
    <string name="text_please_input_a_password">请输入密码</string>
    <string name="text_please_input_new_password">请输入新密码</string>
    <string name="text_confirm_password">确认密码</string>
    <string name="text_create_enterprise">创建企业</string>
    <string name="text_no_join_enterprise">您当前还未加入任何企业哦</string>
    <string name="register">注册</string>
    <string name="retrieve_password">找回密码</string>
    <string name="image_verification_code_error">图片验证码错误</string>
    <string name="please_enter_the_correct_phone_number">请输入正确的手机号码！</string>
    <string name="re_acquisition">重新获取</string>
    <string name="the_two_password_is_not_uniform_please_re_enter">两次密码不统一，请重新输入</string>
    <string name="application_to_join_the_enterprise">申请加入企业</string>


    <!-- 申请加入企业 -->
    <string name="text_join_enterprise_id">请输入企业ID</string>
    <string name="text_join_enterprise_name">请输入您的姓名</string>
    <string name="text_join_enterprise_dep">部门</string>
    <string name="text_join_enterprise_job">职位</string>
    <string name="text_join_enterprise_review">您的申请已提交，审批通过后，将以短信形式向您发送账户密码信息，请您耐心等待。</string>
    <string name="you_are_applying_to_join">您正在申请加入"\""%1$s"\"" </string>


    <!-- 标题栏文字 -->
    <string name="text_prompt">提示</string>
    <string name="text_select_enterprise">选择企业</string>


    <!-- crash信息 -->
    <string name="customactivityoncrash_error">抱歉，出现了不可预期的错误，您可重新启动应用，或者将错误信息反馈给我们，感谢您的理解与支持！</string>
    <string name="customactivityoncrash_error_activity_unknown_exception">未知异常</string>
    <string name="customactivityoncrash_error_activity_restart_app">重新启动</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭应用</string>
    <string name="customactivityoncrash_error_activity_error_details">查看错误信息</string>
    <string name="customactivityoncrash_error_activity_error_upload">上传错误信息</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误信息</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">复制</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>

    <!--首页-->

    <string name="sign">签到</string>
    <string name="waiting_for_my_approval">待我审批</string>
    <string name="job_alert">工作提醒</string>
    <string name="your_attendance_is_in_the_statistics">你的考勤正在统计中</string>
    <string name="my_attendance">我的考勤</string>
    <string name="quickly_check_your_application">快速查看你的申请</string>
    <string name="my_application">我的申请</string>
    <string name="a_business_travel">出差</string>
    <string name="leave">请假</string>
    <string name="approval">审批</string>
    <string name="do_not_wait_any_longer">再也不要等待了</string>
    <string name="overtime">加班</string>
    <string name="more">更多</string>
    <string name="small_partners_are_in_this">小伙伴们都在这</string>
    <string name="mail_list">通讯录</string>
    <string name="fast_learning_to_improve_work_efficiency">快速学习提升工作效率</string>
    <string name="help_center">帮助中心</string>
    <string name="application_center">应用中心</string>
    <string name="the_new_version_of_the_line.there_are_comments_to_mention_oh">新版上线啦，有意见快来提哦！！</string>



</resources>
