<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_F7F9FC"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70px"
        android:gravity="center"
        android:text="@string/text_no_join_enterprise"
        android:textColor="@color/gray_666666"
        android:textSize="28px" />

    <TextView
        android:id="@+id/tv_join_enterprise"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="96px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="70px"
        android:background="@drawable/rectangle_5dp_blue_selected"
        android:gravity="center"
        android:text="@string/text_application_to_join_the_enterprise"
        android:textColor="@android:color/white"
        android:textSize="30px" />


    <TextView
        android:id="@+id/tv_create_enterprise"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="96px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="40px"
        android:background="@drawable/rectangle_5dp_blue_selected"
        android:gravity="center"
        android:text="@string/text_create_enterprise"
        android:textColor="@android:color/white"
        android:textSize="30px" />

</LinearLayout>