<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_join_enterprise_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_F7F9FC"
              android:orientation="vertical">

    <!--请输入企业ID-->
    <LinearLayout
        android:id="@+id/ll_join_enterprise_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_enterprise_id"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="80px"
            android:background="@drawable/rectangle_27dp_white"
            android:hint="@string/text_join_enterprise_id"
            android:inputType="number"
            android:paddingLeft="50px"
            android:textColor="@color/gray_666666"
            android:textColorHint="@color/gray_666666"
            android:textSize="28px"/>

        <TextView
            android:id="@+id/tv_next_one"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="50px"
            android:background="@drawable/rectangle_27dp_blue"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/text_next"
            android:textColor="@android:color/white"
            android:textSize="30px"/>
    </LinearLayout>


    <!--申请加入企业-->
    <LinearLayout
        android:id="@+id/ll_join_enterprise"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_name_of_enterprise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="70px"
            android:gravity="center"
            android:text="您正在申请加入“曼威网络科技有限公司”"/>


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="50px"
            android:background="@drawable/rectangle_27dp_white"
            android:hint="@string/text_join_enterprise_name"
            android:paddingLeft="50px"
            android:textColor="@color/gray_666666"
            android:textColorHint="@color/gray_666666"
            android:textSize="28px"/>

        <EditText
            android:id="@+id/et_department"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="40px"
            android:background="@drawable/rectangle_27dp_white"
            android:hint="@string/text_join_enterprise_dep"
            android:paddingLeft="50px"
            android:textColor="@color/gray_666666"
            android:textColorHint="@color/gray_666666"
            android:textSize="28px"/>

        <EditText
            android:id="@+id/et_position"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="40px"
            android:background="@drawable/rectangle_27dp_white"
            android:hint="@string/text_join_enterprise_job"
            android:paddingLeft="50px"
            android:textColor="@color/gray_666666"
            android:textColorHint="@color/gray_666666"
            android:textSize="28px"/>

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="40px"
            android:background="@drawable/rectangle_27dp_white"
            android:hint="@string/text_please_enter_your_phone_number"
            android:inputType="number"
            android:paddingLeft="50px"
            android:textColor="@color/gray_666666"
            android:textColorHint="@color/gray_666666"
            android:textSize="28px"/>

        <RelativeLayout
            android:id="@+id/rl_picture_code_layout"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="40px"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_picture_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_27dp_white"
                android:hint="@string/text_please_enter_the_verification_code"
                android:inputType="textVisiblePassword"
                android:paddingLeft="50px"
                android:textColor="@color/gray_666666"
                android:textColorHint="@color/gray_666666"
                android:textSize="28px"/>

            <LinearLayout
                android:layout_width="238px"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/rectangle_27dp_white"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_picture_code"
                    android:layout_width="234px"
                    android:layout_height="79px"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="40px">

            <EditText
                android:id="@+id/et_phone_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_27dp_white"
                android:hint="@string/text_please_enter_the_verification_code"
                android:inputType="number"
                android:paddingLeft="50px"
                android:textColor="@color/gray_666666"
                android:textColorHint="@color/gray_666666"
                android:textSize="28px"/>

            <TextView
                android:id="@+id/tv_register_get_code"
                android:layout_width="238px"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/rectangle_27dp_blue"
                android:gravity="center"
                android:text="@string/text_get_verification_code"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_next_two"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="50px"
            android:background="@drawable/rectangle_27dp_blue"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/text_next"
            android:textColor="@android:color/white"
            android:textSize="30px"/>
    </LinearLayout>


    <!--申请验证-->
    <LinearLayout
        android:id="@+id/ll_join_enterprise_verify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="100px"
            android:gravity="center"
            android:lineSpacingExtra="15px"
            android:text="@string/text_join_enterprise_review"
            android:textSize="30px"/>

        <TextView
            android:id="@+id/tv_next_three"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="80px"
            android:background="@drawable/rectangle_27dp_blue_selected"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/text_back"
            android:textColor="@android:color/white"
            android:textSize="30px"/>
    </LinearLayout>
</LinearLayout>