<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_F7F9FC"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30px">

        <ImageView
            android:id="@+id/customactivityoncrash_error_activity_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/error_image" />

        <TextView
            android:textColor="@color/gray_666666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/customactivityoncrash_error"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="92px"
            android:layout_marginTop="20px"
            android:background="@drawable/rectangle_5dp_blue_selected"
            android:text="@string/customactivityoncrash_error_activity_error_details"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/customactivityoncrash_error_activity_more_info_button"
            android:layout_width="match_parent"
            android:layout_height="92px"
            android:layout_marginTop="25px"
            android:background="@drawable/rectangle_5dp_blue_selected"
            android:text="@string/customactivityoncrash_error_activity_error_upload"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
