<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="450px"
        android:background="@mipmap/logo3">

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/app_logo"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="76px" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/tv_accont_login"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text_sign_in"
                android:textColor="@color/black"
                android:textSize="30px" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="38px"
                android:src="@mipmap/ic_user_rectangle" />

            <TextView
                android:id="@+id/tv_smscode_login"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text_registration_of_new_enterprises"
                android:textColor="@color/black"
                android:textSize="30px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:src="@mipmap/ic_user_triangle" />

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:src="@mipmap/ic_user_triangle"
                android:visibility="invisible" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginLeft="50px"
            android:layout_marginTop="60px"
            android:layout_marginRight="50px"
            android:background="@drawable/rectangle_5dp_white"
            android:drawableLeft="@mipmap/ic_user_account"
            android:drawablePadding="54px"
            android:hint="@string/text_phone_number"
            android:inputType="number"
            android:paddingLeft="50px"
            android:text="18804272191"
            android:textColor="@color/gray_666666"
            android:textColorHint="@color/gray_666666"
            android:textSize="28px" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginLeft="50px"
            android:layout_marginTop="50px"
            android:layout_marginRight="50px"
            android:background="@drawable/rectangle_5dp_white"
            android:drawableLeft="@mipmap/ic_user_password"
            android:drawablePadding="54px"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:paddingLeft="50px"
            android:text=""
            android:textColor="@color/gray_666666"
            android:textColorHint="@color/gray_666666"
            android:textSize="28px" />


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginLeft="30px"
            android:layout_marginTop="50px"
            android:layout_marginRight="30px"
            android:background="@drawable/rectangle_5dp_blue"
            android:gravity="center"
            android:text="@string/text_sign_in"
            android:textColor="@android:color/black"
            android:textSize="30px" />

        <TextView
            android:id="@+id/tv_forgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30px"
            android:clickable="true"
            android:text="@string/text_forget_password"
            android:textColor="@color/gray_999999"
            android:textSize="26px" />

        <TextView
            android:id="@+id/tv_join_enterprise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30px"
            android:clickable="true"
            android:text="@string/text_application_to_join_the_enterprise"
            android:textColor="@color/blue_85B2F6"
            android:textSize="30px" />
    </LinearLayout>


    <!--手机验证码登录布局-->
    <LinearLayout
        android:id="@+id/view_phoneCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_F7F9FC"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:orientation="vertical">

            <EditText
                android:text="15717176068"
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="90px"
                android:layout_marginTop="80px"
                android:background="@drawable/rectangle_5dp_white"
                android:hint="@string/text_please_enter_your_phone_number"
                android:inputType="number"
                android:paddingLeft="50px"
                android:textColor="@color/gray_666666"
                android:textColorHint="@color/gray_666666"
                android:textSize="28px" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="90px"
                android:layout_marginTop="40px">

                <EditText
                    android:id="@+id/et_phone_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_5dp_white"
                    android:hint="@string/text_please_enter_the_verification_code"
                    android:inputType="number"
                    android:paddingLeft="50px"
                    android:textColor="@color/gray_666666"
                    android:textColorHint="@color/gray_666666"
                    android:textSize="28px" />

                <TextView
                    android:id="@+id/tv_get_code"
                    android:layout_width="238px"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/rectangle_5dp_blue"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/text_get_verification_code"
                    android:textColor="@android:color/black" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_get_code_login"
                android:layout_width="match_parent"
                android:layout_height="90px"
                android:layout_marginTop="50px"
                android:background="@drawable/rectangle_5dp_blue"
                android:clickable="true"
                android:gravity="center"
                android:text="登录"
                android:textColor="@android:color/black"
                android:textSize="30px" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
